// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentBadge — snapshots > matches snapshot: active badge with dot 1`] = `"<span style="color: rgb(49, 29, 165); background-color: rgb(227, 224, 246); border-color: rgb(182, 174, 224);" title="review-master" class="inline-flex items-center gap-1 px-1.5 py-0.5 rounded text-xs border font-mono max-w-[120px]"><span class="w-1.5 h-1.5 rounded-full bg-emerald-400 shrink-0"></span><span class="truncate">review-master</span></span>"`;

exports[`AgentBadge — snapshots > matches snapshot: inactive badge 1`] = `"<span style="color: rgb(165, 131, 29); background-color: rgb(246, 240, 224); border-color: rgb(224, 211, 174);" title="dev-front-vuejs" class="inline-flex items-center gap-1 px-1.5 py-0.5 rounded text-xs border font-mono max-w-[120px]"><!--v-if--><span class="truncate">dev-front-vuejs</span></span>"`;

exports[`ConfirmDialog — snapshots > matches snapshot: danger dialog 1`] = `
"<v-dialog model-value="true" max-width="420" persistent="">
  <v-card role="alertdialog" aria-modal="true" aria-label="Delete agent?">
    <!-- Header with icon -->
    <div class="flex items-start gap-3 px-5 pt-5 pb-3">
      <!-- Icon -->
      <div class="w-9 h-9 rounded-lg flex items-center justify-center shrink-0 bg-red-500/15">
        <!-- Danger icon --><svg viewBox="0 0 16 16" fill="currentColor" class="w-4.5 h-4.5 text-red-400">
          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
          <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"></path>
        </svg>
      </div>
      <div class="flex-1 min-w-0">
        <h3 class="text-sm font-semibold text-content-primary leading-tight">Delete agent?</h3>
        <p class="text-sm text-content-secondary mt-1.5 leading-relaxed">This action is irreversible.</p>
        <!--v-if-->
      </div>
    </div><!-- Actions -->
    <v-card-actions class="px-5 py-4 border-t border-edge-subtle">
      <v-spacer></v-spacer><button class="px-4 py-2 text-sm text-content-muted hover:text-content-secondary hover:bg-surface-secondary rounded-lg transition-colors">Cancel</button><button class="px-4 py-2 text-sm font-medium rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-offset-transparent bg-red-600 hover:bg-red-500 text-white focus:ring-red-500">Delete</button>
    </v-card-actions>
  </v-card>
</v-dialog>"
`;

exports[`ConfirmDialog — snapshots > matches snapshot: info dialog 1`] = `
"<v-dialog model-value="true" max-width="420" persistent="">
  <v-card role="alertdialog" aria-modal="true" aria-label="Confirm action?">
    <!-- Header with icon -->
    <div class="flex items-start gap-3 px-5 pt-5 pb-3">
      <!-- Icon -->
      <div class="w-9 h-9 rounded-lg flex items-center justify-center shrink-0 bg-blue-500/15">
        <!-- Danger icon -->
        <!-- Info icon --><svg viewBox="0 0 16 16" fill="currentColor" class="w-4.5 h-4.5 text-blue-400">
          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
          <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
        </svg>
      </div>
      <div class="flex-1 min-w-0">
        <h3 class="text-sm font-semibold text-content-primary leading-tight">Confirm action?</h3>
        <p class="text-sm text-content-secondary mt-1.5 leading-relaxed">Do you want to proceed?</p>
        <!--v-if-->
      </div>
    </div><!-- Actions -->
    <v-card-actions class="px-5 py-4 border-t border-edge-subtle">
      <v-spacer></v-spacer><button class="px-4 py-2 text-sm text-content-muted hover:text-content-secondary hover:bg-surface-secondary rounded-lg transition-colors">Cancel</button><button class="px-4 py-2 text-sm font-medium rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-offset-transparent bg-blue-600 hover:bg-blue-500 text-white focus:ring-blue-500">OK</button>
    </v-card-actions>
  </v-card>
</v-dialog>"
`;

exports[`ContextMenu — snapshots > matches snapshot: items with separator 1`] = `
"<div to="body">
  <div class="fixed inset-0 z-[200]">
    <div class="absolute bg-surface-primary border border-edge-default rounded-lg shadow-2xl py-1 min-w-[188px]" style="left: 50px; top: 80px;"><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Edit</button><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Add subgroup</button>
      <div class="my-1 border-t border-edge-subtle"></div><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Delete</button>
    </div>
  </div>
</div>"
`;

exports[`ContextMenu — snapshots > matches snapshot: simple items (no separator) 1`] = `
"<div to="body">
  <div class="fixed inset-0 z-[200]">
    <div class="absolute bg-surface-primary border border-edge-default rounded-lg shadow-2xl py-1 min-w-[188px]" style="left: 100px; top: 200px;"><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Rename</button><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Delete</button></div>
  </div>
</div>"
`;

exports[`DbSelector — snapshots > matches snapshot: home screen (no project selected) 1`] = `
"<!-- Accueil -->
<div data-v-2585d2c8="" class="screen-center">
  <div data-v-2585d2c8="" class="home-content">
    <!-- Logo -->
    <div data-v-2585d2c8="" class="logo-wrap"><svg data-v-2585d2c8="" viewBox="0 0 24 24" fill="none" class="logo-icon">
        <path data-v-2585d2c8="" d="M12 2L3 7v5c0 5.25 3.75 10.15 9 11.35C17.25 22.15 21 17.25 21 12V7l-9-5z" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"></path>
        <path data-v-2585d2c8="" d="M9 12l2 2 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
      </svg></div>
    <div data-v-2585d2c8="" class="home-titles">
      <h2 data-v-2585d2c8="" class="app-name">KanbAgent</h2>
      <p data-v-2585d2c8="" class="app-tagline">Visualisez les tâches de vos agents en temps réel.</p>
    </div><!-- 2 options -->
    <div data-v-2585d2c8="" class="action-grid">
      <!-- Ouvrir existant --><button data-v-2585d2c8="" class="action-card">
        <div data-v-2585d2c8="" class="action-icon-wrap"><svg data-v-2585d2c8="" viewBox="0 0 20 20" fill="currentColor" class="action-icon">
            <path data-v-2585d2c8="" d="M2 6a2 2 0 012-2h5l2 2h5a2 2 0 012 2v6a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"></path>
          </svg></div>
        <div data-v-2585d2c8="">
          <p data-v-2585d2c8="" class="action-label">Ouvrir</p>
          <p data-v-2585d2c8="" class="action-sublabel">Projet existant</p>
        </div>
      </button><!-- Créer nouveau --><button data-v-2585d2c8="" class="action-card action-card--primary">
        <div data-v-2585d2c8="" class="action-icon-wrap action-icon-wrap--primary"><svg data-v-2585d2c8="" viewBox="0 0 20 20" fill="currentColor" class="action-icon action-icon--primary">
            <path data-v-2585d2c8="" fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd"></path>
          </svg></div>
        <div data-v-2585d2c8="">
          <p data-v-2585d2c8="" class="action-label action-label--primary">Créer</p>
          <p data-v-2585d2c8="" class="action-sublabel">Nouveau projet</p>
        </div>
      </button>
    </div>
    <!--v-if-->
    <!-- Language selector -->
    <div data-v-2585d2c8="" class="lang-row"><select data-v-2585d2c8="" aria-label="Language" class="lang-select" value="fr">
        <option value="fr" data-v-2585d2c8="">Français</option>
        <option value="en" data-v-2585d2c8="">English</option>
        <option value="es" data-v-2585d2c8="">Español</option>
        <option value="pt" data-v-2585d2c8="">Português</option>
        <option value="pt-BR" data-v-2585d2c8="">Português (Brasil)</option>
        <option value="de" data-v-2585d2c8="">Deutsch</option>
        <option value="no" data-v-2585d2c8="">Norsk</option>
        <option value="it" data-v-2585d2c8="">Italiano</option>
        <option value="ar" data-v-2585d2c8="">العربية</option>
        <option value="ru" data-v-2585d2c8="">Русский</option>
        <option value="pl" data-v-2585d2c8="">Polski</option>
        <option value="sv" data-v-2585d2c8="">Svenska</option>
        <option value="fi" data-v-2585d2c8="">Suomi</option>
        <option value="da" data-v-2585d2c8="">Dansk</option>
        <option value="tr" data-v-2585d2c8="">Türkçe</option>
        <option value="zh-CN" data-v-2585d2c8="">中文（简体）</option>
        <option value="ko" data-v-2585d2c8="">한국어</option>
        <option value="ja" data-v-2585d2c8="">日本語</option>
      </select></div>
  </div>
</div>"
`;

exports[`DbSelector — snapshots > matches snapshot: home screen with error 1`] = `
"<!-- Accueil -->
<div data-v-2585d2c8="" class="screen-center">
  <div data-v-2585d2c8="" class="home-content">
    <!-- Logo -->
    <div data-v-2585d2c8="" class="logo-wrap"><svg data-v-2585d2c8="" viewBox="0 0 24 24" fill="none" class="logo-icon">
        <path data-v-2585d2c8="" d="M12 2L3 7v5c0 5.25 3.75 10.15 9 11.35C17.25 22.15 21 17.25 21 12V7l-9-5z" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"></path>
        <path data-v-2585d2c8="" d="M9 12l2 2 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
      </svg></div>
    <div data-v-2585d2c8="" class="home-titles">
      <h2 data-v-2585d2c8="" class="app-name">KanbAgent</h2>
      <p data-v-2585d2c8="" class="app-tagline">Visualisez les tâches de vos agents en temps réel.</p>
    </div><!-- 2 options -->
    <div data-v-2585d2c8="" class="action-grid">
      <!-- Ouvrir existant --><button data-v-2585d2c8="" class="action-card">
        <div data-v-2585d2c8="" class="action-icon-wrap"><svg data-v-2585d2c8="" viewBox="0 0 20 20" fill="currentColor" class="action-icon">
            <path data-v-2585d2c8="" d="M2 6a2 2 0 012-2h5l2 2h5a2 2 0 012 2v6a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"></path>
          </svg></div>
        <div data-v-2585d2c8="">
          <p data-v-2585d2c8="" class="action-label">Ouvrir</p>
          <p data-v-2585d2c8="" class="action-sublabel">Projet existant</p>
        </div>
      </button><!-- Créer nouveau --><button data-v-2585d2c8="" class="action-card action-card--primary">
        <div data-v-2585d2c8="" class="action-icon-wrap action-icon-wrap--primary"><svg data-v-2585d2c8="" viewBox="0 0 20 20" fill="currentColor" class="action-icon action-icon--primary">
            <path data-v-2585d2c8="" fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd"></path>
          </svg></div>
        <div data-v-2585d2c8="">
          <p data-v-2585d2c8="" class="action-label action-label--primary">Créer</p>
          <p data-v-2585d2c8="" class="action-sublabel">Nouveau projet</p>
        </div>
      </button>
    </div>
    <p data-v-2585d2c8="" class="error-msg">DB not found</p><!-- Language selector -->
    <div data-v-2585d2c8="" class="lang-row"><select data-v-2585d2c8="" aria-label="Language" class="lang-select" value="fr">
        <option value="fr" data-v-2585d2c8="">Français</option>
        <option value="en" data-v-2585d2c8="">English</option>
        <option value="es" data-v-2585d2c8="">Español</option>
        <option value="pt" data-v-2585d2c8="">Português</option>
        <option value="pt-BR" data-v-2585d2c8="">Português (Brasil)</option>
        <option value="de" data-v-2585d2c8="">Deutsch</option>
        <option value="no" data-v-2585d2c8="">Norsk</option>
        <option value="it" data-v-2585d2c8="">Italiano</option>
        <option value="ar" data-v-2585d2c8="">العربية</option>
        <option value="ru" data-v-2585d2c8="">Русский</option>
        <option value="pl" data-v-2585d2c8="">Polski</option>
        <option value="sv" data-v-2585d2c8="">Svenska</option>
        <option value="fi" data-v-2585d2c8="">Suomi</option>
        <option value="da" data-v-2585d2c8="">Dansk</option>
        <option value="tr" data-v-2585d2c8="">Türkçe</option>
        <option value="zh-CN" data-v-2585d2c8="">中文（简体）</option>
        <option value="ko" data-v-2585d2c8="">한국어</option>
        <option value="ja" data-v-2585d2c8="">日本語</option>
      </select></div>
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: column with 2 tasks 1`] = `
"<div data-v-b539d429="" class="column-wrap">
  <div data-v-b539d429="" class="column-header">
    <div data-v-b539d429="" class="column-title-row">
      <div data-v-b539d429="" class="column-accent" style="background-color: rgb(148, 163, 184);"></div><span data-v-b539d429="" class="column-title">Todo</span>
    </div><span data-v-b539d429="" class="column-count">2</span>
  </div><!-- List mode -->
  <div data-v-b539d429="" class="column-body" style="contain: content;">
    <task-card-stub data-v-b539d429="" task="[object Object]"></task-card-stub>
    <task-card-stub data-v-b539d429="" task="[object Object]"></task-card-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: empty column 1`] = `
"<div data-v-b539d429="" class="column-wrap">
  <div data-v-b539d429="" class="column-header">
    <div data-v-b539d429="" class="column-title-row">
      <div data-v-b539d429="" class="column-accent" style="background-color: rgb(148, 163, 184);"></div><span data-v-b539d429="" class="column-title">Todo</span>
    </div><span data-v-b539d429="" class="column-count">0</span>
  </div><!-- List mode -->
  <div data-v-b539d429="" class="column-body" style="contain: content;">
    <div data-v-b539d429="" class="column-empty">Aucune tâche</div>
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: in_progress column (drop target) 1`] = `
"<div data-v-b539d429="" class="column-wrap">
  <div data-v-b539d429="" class="column-header">
    <div data-v-b539d429="" class="column-title-row">
      <div data-v-b539d429="" class="column-accent" style="background-color: rgb(34, 211, 238);"></div><span data-v-b539d429="" class="column-title">In Progress</span>
    </div><span data-v-b539d429="" class="column-count">1</span>
  </div><!-- List mode -->
  <div data-v-b539d429="" class="column-body" style="contain: content;">
    <task-card-stub data-v-b539d429="" task="[object Object]"></task-card-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`TabBar — snapshots > matches snapshot: empty tab bar (no tabs) 1`] = `
"<div data-v-3c3dc65a="" class="tabbar">
  <!-- Onglet Backlog (fixe) --><button data-v-3c3dc65a="" class="tab-fixed"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="tab-icon">
      <rect data-v-3c3dc65a="" x="1" y="2" width="4" height="12" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="6" y="2" width="4" height="8" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="11" y="2" width="4" height="5" rx="1.5"></rect>
    </svg><span data-v-3c3dc65a="">Backlog</span><!-- .absolute.bottom-0 preserved for TabBar.spec.ts test -->
    <!--v-if-->
  </button><!-- Onglet Stat (fixe) --><button data-v-3c3dc65a="" class="tab-fixed"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="tab-icon">
      <path data-v-3c3dc65a="" d="M0 11l4-5 3 3 4-6 5 3v5H0z"></path>
    </svg><span data-v-3c3dc65a="">Dashboard</span>
    <!--v-if-->
  </button><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" style="width: 12px; height: 12px;">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"></path>
    </svg></button><!-- Onglets (scrollable) -->
  <div data-v-3c3dc65a="" class="scroll-container">
    <!-- Onglets fichiers -->
    <!-- Groupe agent -->
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" style="width: 12px; height: 12px;">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
    </svg></button><!-- Bouton + WSL --><button data-v-3c3dc65a="" class="btn-wsl" title="Ouvrir un terminal WSL"><span data-v-3c3dc65a="" class="btn-wsl-plus">+</span><span data-v-3c3dc65a="">WSL</span></button>
  <div data-v-3c3dc65a="" style="width: 12px; flex-shrink: 0;"></div>
</div>
<!-- Menu contextuel groupe d'onglets -->
<!--v-if-->"
`;

exports[`TabBar — snapshots > matches snapshot: tab bar with one terminal tab 1`] = `
"<div data-v-3c3dc65a="" class="tabbar">
  <!-- Onglet Backlog (fixe) --><button data-v-3c3dc65a="" class="tab-fixed"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="tab-icon">
      <rect data-v-3c3dc65a="" x="1" y="2" width="4" height="12" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="6" y="2" width="4" height="8" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="11" y="2" width="4" height="5" rx="1.5"></rect>
    </svg><span data-v-3c3dc65a="">Backlog</span><!-- .absolute.bottom-0 preserved for TabBar.spec.ts test -->
    <!--v-if-->
  </button><!-- Onglet Stat (fixe) --><button data-v-3c3dc65a="" class="tab-fixed"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="tab-icon">
      <path data-v-3c3dc65a="" d="M0 11l4-5 3 3 4-6 5 3v5H0z"></path>
    </svg><span data-v-3c3dc65a="">Dashboard</span>
    <!--v-if-->
  </button><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" style="width: 12px; height: 12px;">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"></path>
    </svg></button><!-- Onglets (scrollable) -->
  <div data-v-3c3dc65a="" class="scroll-container">
    <!-- Onglets fichiers -->
    <!-- Groupe agent -->
    <div data-v-3c3dc65a="" class="tab-group">
      <!-- Onglet-agent (bouton principal du groupe) --><button data-v-3c3dc65a="" class="tab-agent" style="color: rgb(235, 159, 112); background-color: rgb(66, 41, 26);"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width: 12px; height: 12px; flex-shrink: 0;">
          <polyline data-v-3c3dc65a="" points="2,5 6.5,8 2,11"></polyline>
          <line data-v-3c3dc65a="" x1="8.5" y1="11" x2="14" y2="11"></line>
        </svg><span data-v-3c3dc65a="" style="opacity: 0.5; user-select: none;">·</span><span data-v-3c3dc65a="" class="tab-agent-name">dev-front</span><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="tab-chevron" style="transform: rotate(-90deg);">
          <path data-v-3c3dc65a="" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path>
        </svg>
        <!--v-if--><span data-v-3c3dc65a="" style="position: absolute; bottom: 0px; left: 0px; right: 0px; height: 2px; background-color: rgb(235, 159, 112);"></span>
      </button><!-- Sous-onglets session (masqués si groupe collapsé) --><button data-v-3c3dc65a="" class="tab-sub" style="color: rgb(235, 159, 112); background-color: rgb(66, 41, 26);" title="#1"><span data-v-3c3dc65a="" class="tab-sub-label">#1</span>
        <!--v-if--><span data-v-3c3dc65a="" class="tab-close" title="Fermer">✕</span><span data-v-3c3dc65a="" style="position: absolute; bottom: 0px; left: 0px; right: 0px; height: 2px; background-color: rgb(235, 159, 112);"></span>
      </button>
    </div>
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" style="width: 12px; height: 12px;">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
    </svg></button><!-- Bouton + WSL --><button data-v-3c3dc65a="" class="btn-wsl" title="Ouvrir un terminal WSL"><span data-v-3c3dc65a="" class="btn-wsl-plus">+</span><span data-v-3c3dc65a="">WSL</span></button>
  <div data-v-3c3dc65a="" style="width: 12px; flex-shrink: 0;"></div>
</div>
<!-- Menu contextuel groupe d'onglets -->
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: critical in_progress task with all badges 1`] = `
"<div data-v-8da3d041="" class="task-card" draggable="true">
  <!-- Top row: title + effort/priority -->
  <div data-v-8da3d041="" class="card-top">
    <div data-v-8da3d041="" class="card-title-area"><span data-v-8da3d041="" class="card-pulse" title="Tâche en cours d'exécution" aria-label="Tâche en cours d'exécution"></span>
      <p data-v-8da3d041="" class="card-title">Urgent Fix</p>
    </div>
    <div data-v-8da3d041="" class="card-badge-row">
      <!--v-if--><span data-v-8da3d041="" class="badge badge-priority-critical">!!</span><span data-v-8da3d041="" class="badge badge-effort-3">L</span>
    </div>
  </div><!-- Badges: perimeter + agent avatars -->
  <div data-v-8da3d041="" class="card-meta"><span data-v-8da3d041="" class="badge-scope" style="color: rgb(123, 197, 234); background-color: rgb(24, 43, 52); border-color: rgb(43, 77, 94);">back-electron</span><!-- Multi-agent avatars (≤3 + overflow badge) -->
    <!-- Fallback: single agent badge when no task_agents rows -->
    <agent-badge-stub data-v-8da3d041="" name="dev-back" active="false"></agent-badge-stub>
  </div><!-- Footer: dates left, #id right -->
  <div data-v-8da3d041="" class="card-footer card-footer-bordered">
    <div data-v-8da3d041="" class="card-dates">
      <p data-v-8da3d041="" class="card-date"><span data-v-8da3d041="" class="date-label">Créé</span> 01/01/26 00:00</p>
      <p data-v-8da3d041="" class="card-date"><span data-v-8da3d041="" class="date-label">Modifié</span> 01/01/26 00:00</p>
    </div><span data-v-8da3d041="" class="card-id">#42</span>
  </div>
</div>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: done task without agent or perimetre 1`] = `
"<div data-v-8da3d041="" class="task-card" draggable="false">
  <!-- Top row: title + effort/priority -->
  <div data-v-8da3d041="" class="card-top">
    <div data-v-8da3d041="" class="card-title-area">
      <!--v-if-->
      <p data-v-8da3d041="" class="card-title">Completed Task</p>
    </div>
    <div data-v-8da3d041="" class="card-badge-row">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div><!-- Badges: perimeter + agent avatars -->
  <!--v-if-->
  <!-- Footer: dates left, #id right -->
  <div data-v-8da3d041="" class="card-footer">
    <div data-v-8da3d041="" class="card-dates">
      <p data-v-8da3d041="" class="card-date"><span data-v-8da3d041="" class="date-label">Créé</span> 01/01/26 00:00</p>
      <p data-v-8da3d041="" class="card-date"><span data-v-8da3d041="" class="date-label">Modifié</span> 01/01/26 00:00</p>
    </div><span data-v-8da3d041="" class="card-id">#99</span>
  </div>
</div>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: minimal todo task 1`] = `
"<div data-v-8da3d041="" class="task-card" draggable="true">
  <!-- Top row: title + effort/priority -->
  <div data-v-8da3d041="" class="card-top">
    <div data-v-8da3d041="" class="card-title-area">
      <!--v-if-->
      <p data-v-8da3d041="" class="card-title">Simple Task</p>
    </div>
    <div data-v-8da3d041="" class="card-badge-row">
      <!--v-if-->
      <!--v-if--><span data-v-8da3d041="" class="badge badge-effort-1">S</span>
    </div>
  </div><!-- Badges: perimeter + agent avatars -->
  <div data-v-8da3d041="" class="card-meta"><span data-v-8da3d041="" class="badge-scope" style="color: rgb(190, 228, 129); background-color: rgb(41, 50, 26); border-color: rgb(74, 91, 47);">front-vuejs</span><!-- Multi-agent avatars (≤3 + overflow badge) -->
    <!-- Fallback: single agent badge when no task_agents rows -->
    <agent-badge-stub data-v-8da3d041="" name="dev-front" active="false"></agent-badge-stub>
  </div><!-- Footer: dates left, #id right -->
  <div data-v-8da3d041="" class="card-footer card-footer-bordered">
    <div data-v-8da3d041="" class="card-dates">
      <p data-v-8da3d041="" class="card-date"><span data-v-8da3d041="" class="date-label">Créé</span> 01/01/26 00:00</p>
      <p data-v-8da3d041="" class="card-date"><span data-v-8da3d041="" class="date-label">Modifié</span> 01/01/26 00:00</p>
    </div><span data-v-8da3d041="" class="card-id">#10</span>
  </div>
</div>
<!--v-if-->"
`;

exports[`TitleBar — snapshots > matches snapshot: maximized 1`] = `
"<!-- elevation="0" flat desktop look; height="36" = original h-9 titlebar.
       All controls in default slot (not named slots) so shallowMount renders them correctly.
       -webkit-app-region: drag is required for Electron frameless window dragging. -->
<v-app-bar data-v-f5fc7a66="" elevation="0" height="36" color="surface" class="titlebar">
  <div data-v-f5fc7a66="" class="titlebar-content">
    <!-- Left: App identity -->
    <div data-v-f5fc7a66="" class="titlebar-left">
      <div data-v-f5fc7a66="" class="titlebar-dot"></div><span data-v-f5fc7a66="" class="titlebar-name">KanbAgent</span>
    </div><!-- Center: Search bar (always visible, VS Code style) -->
    <div data-v-f5fc7a66="" class="titlebar-center"><button data-v-f5fc7a66="" class="search-btn" title="Rechercher une tâche (Ctrl+K)"><svg data-v-f5fc7a66="" viewBox="0 0 16 16" fill="currentColor" class="search-icon">
          <path data-v-f5fc7a66="" d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.099zm-5.242 1.656a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11z"></path>
        </svg><span data-v-f5fc7a66="" class="search-text">Rechercher…</span><kbd data-v-f5fc7a66="" class="search-kbd">Ctrl+K</kbd></button></div><!-- Right: Window controls — Windows 11 style -->
    <div data-v-f5fc7a66="" class="titlebar-controls">
      <!-- Minimize --><button data-v-f5fc7a66="" class="win-btn" title="Minimiser"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" fill="currentColor">
          <rect data-v-f5fc7a66="" x="0" y="4.5" width="10" height="1"></rect>
        </svg></button><!-- Maximize / Restore --><button data-v-f5fc7a66="" class="win-btn" title="Restaurer"><svg data-v-f5fc7a66="" width="11" height="11" viewBox="0 0 11 11" fill="none" stroke="currentColor" stroke-width="1">
          <rect data-v-f5fc7a66="" x="3.5" y="0.5" width="7" height="7" rx="0.5"></rect>
          <path data-v-f5fc7a66="" d="M0.5 3.5v7h7v-3"></path>
        </svg></button><!-- Close --><button data-v-f5fc7a66="" class="win-btn win-btn--close" title="Fermer"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" stroke="currentColor" stroke-width="1.1" stroke-linecap="round">
          <line data-v-f5fc7a66="" x1="0.5" y1="0.5" x2="9.5" y2="9.5"></line>
          <line data-v-f5fc7a66="" x1="9.5" y1="0.5" x2="0.5" y2="9.5"></line>
        </svg></button>
    </div>
  </div>
</v-app-bar>"
`;

exports[`TitleBar — snapshots > matches snapshot: not maximized 1`] = `
"<!-- elevation="0" flat desktop look; height="36" = original h-9 titlebar.
       All controls in default slot (not named slots) so shallowMount renders them correctly.
       -webkit-app-region: drag is required for Electron frameless window dragging. -->
<v-app-bar data-v-f5fc7a66="" elevation="0" height="36" color="surface" class="titlebar">
  <div data-v-f5fc7a66="" class="titlebar-content">
    <!-- Left: App identity -->
    <div data-v-f5fc7a66="" class="titlebar-left">
      <div data-v-f5fc7a66="" class="titlebar-dot"></div><span data-v-f5fc7a66="" class="titlebar-name">KanbAgent</span>
    </div><!-- Center: Search bar (always visible, VS Code style) -->
    <div data-v-f5fc7a66="" class="titlebar-center"><button data-v-f5fc7a66="" class="search-btn" title="Rechercher une tâche (Ctrl+K)"><svg data-v-f5fc7a66="" viewBox="0 0 16 16" fill="currentColor" class="search-icon">
          <path data-v-f5fc7a66="" d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.099zm-5.242 1.656a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11z"></path>
        </svg><span data-v-f5fc7a66="" class="search-text">Rechercher…</span><kbd data-v-f5fc7a66="" class="search-kbd">Ctrl+K</kbd></button></div><!-- Right: Window controls — Windows 11 style -->
    <div data-v-f5fc7a66="" class="titlebar-controls">
      <!-- Minimize --><button data-v-f5fc7a66="" class="win-btn" title="Minimiser"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" fill="currentColor">
          <rect data-v-f5fc7a66="" x="0" y="4.5" width="10" height="1"></rect>
        </svg></button><!-- Maximize / Restore --><button data-v-f5fc7a66="" class="win-btn" title="Agrandir"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" fill="none" stroke="currentColor" stroke-width="1">
          <rect data-v-f5fc7a66="" x="0.5" y="0.5" width="9" height="9" rx="0.5"></rect>
        </svg></button><!-- Close --><button data-v-f5fc7a66="" class="win-btn win-btn--close" title="Fermer"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" stroke="currentColor" stroke-width="1.1" stroke-linecap="round">
          <line data-v-f5fc7a66="" x1="0.5" y1="0.5" x2="9.5" y2="9.5"></line>
          <line data-v-f5fc7a66="" x1="9.5" y1="0.5" x2="0.5" y2="9.5"></line>
        </svg></button>
    </div>
  </div>
</v-app-bar>"
`;

exports[`ToastContainer — snapshots > matches snapshot: empty (no toasts) 1`] = `
"<!-- MD3: fixed bottom-right, stacked toasts with elevation shadow -->
<div class="fixed bottom-4 right-4 z-50 flex flex-col gap-2 max-w-sm pointer-events-none"></div>"
`;

exports[`ToastContainer — snapshots > matches snapshot: three toast types (error, warn, info) 1`] = `
"<!-- MD3: fixed bottom-right, stacked toasts with elevation shadow -->
<div class="fixed bottom-4 right-4 z-50 flex flex-col gap-2 max-w-sm pointer-events-none">
  <div class="flex items-start gap-2.5 px-3 py-2.5 rounded-xl border text-sm shadow-lg pointer-events-auto bg-red-100 dark:bg-red-900/90 border-red-300 dark:border-red-700/60 text-red-800 dark:text-red-200"><span class="shrink-0 text-xs font-mono mt-0.5">✕</span><span class="flex-1 leading-relaxed break-words min-w-0">Connection failed</span><button class="shrink-0 text-xs opacity-50 hover:opacity-100 transition-opacity mt-0.5">✕</button></div>
  <div class="flex items-start gap-2.5 px-3 py-2.5 rounded-xl border text-sm shadow-lg pointer-events-auto bg-amber-100 dark:bg-amber-900/90 border-amber-300 dark:border-amber-700/60 text-amber-800 dark:text-amber-200"><span class="shrink-0 text-xs font-mono mt-0.5">⚠</span><span class="flex-1 leading-relaxed break-words min-w-0">Slow response detected</span><button class="shrink-0 text-xs opacity-50 hover:opacity-100 transition-opacity mt-0.5">✕</button></div>
  <div class="flex items-start gap-2.5 px-3 py-2.5 rounded-xl border text-sm shadow-lg pointer-events-auto bg-surface-secondary/90 border-edge-default text-content-secondary"><span class="shrink-0 text-xs font-mono mt-0.5">ℹ</span><span class="flex-1 leading-relaxed break-words min-w-0">Changes saved</span><button class="shrink-0 text-xs opacity-50 hover:opacity-100 transition-opacity mt-0.5">✕</button></div>
</div>"
`;

exports[`ToggleSwitch — snapshots > matches snapshot: disabled state 1`] = `"<button data-v-c819432f="" type="button" role="switch" aria-checked="false" disabled="" class="toggle-switch is-off"><span data-v-c819432f="" class="toggle-thumb"></span></button>"`;

exports[`ToggleSwitch — snapshots > matches snapshot: off state 1`] = `"<button data-v-c819432f="" type="button" role="switch" aria-checked="false" class="toggle-switch is-off"><span data-v-c819432f="" class="toggle-thumb"></span></button>"`;

exports[`ToggleSwitch — snapshots > matches snapshot: on state 1`] = `"<button data-v-c819432f="" type="button" role="switch" aria-checked="true" class="toggle-switch is-on"><span data-v-c819432f="" class="toggle-thumb"></span></button>"`;
